[package]
name = "vantablack"
version = "0.3.0"
edition = "2021"
description = "Post-quantum, cryptographically layered P2P chat over raw UDP"
license = "MIT"
repository = "https://github.com/yourusername/vantablack"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
reed-solomon-erasure = "6.0.0"
ring = "0.17.8"
gf256 = { version = "0.3", features = ["shamir", "thread-rng"] }
rand = "0.8.5"
x25519-dalek = "2.0.1"
pqcrypto-kyber = "0.8.0"
pqcrypto-traits = "0.3.5"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4"
